# nakulpadalkar.github.io

./: .gitignore  .nojekyll  GithubPortfolio.html  Job_Posting_Analytics.xlsx  PafnutyevAndrey_AD654_Assignment1.docx  PafnutyevAndrey_AD654_Assignment1.html  PafnutyevAndrey_AD654_Assignment1.ipynb  PafnutyevAndrey_AD654_Assignment1.qmd  README.md  _config.yml  _quarto.yml  _variables.yml  about.html  about.qmd  analysis.qmd  assignment-01.qmd  assignment-01.quarto_ipynb  data_cleaning.html  data_cleaning.qmd  index.html  index.qmd  introduction.html  introduction.ipynb  introduction.qmd  listings.json  lobsterland_2021.csv  lobsterland_holiday_sales_data.csv  nakulpadalkar.github.io.Rproj  npadalka_system_info.docx  npadalka_system_info.html  npadalka_system_info.qmd  posts.html  projects.html  projects.qmd  pyproject.toml  python-upgrade.py  requirements.txt  research.html  research.qmd  robots.txt  (+5 more)
_includes/: footer-waves.html  footer.html  head.html  svg-icons.html
_posts/: 2021-02-16-nonlinear-regression.md
_site/: PafnutyevAndrey_AD654_Assignment1.html  about.html  analysis.html  assignment-01.docx  assignment-01.html  index.html  listings.json  npadalka_system_info.docx  npadalka_system_info.html  posts.html  projects.html  research.html  search.json  teaching.html
assets/: nrp.scss  pgp_ath.asc.txt
blog/: index.html
cv/: index.html
now/: index.html
posts/: 03-quarto-github-actions.html
research/: index.html
styles/: styles.scss
talks/: index.html
teaching/: index.html  index.qmd
template/: styles.scss
uses/: index.html
(+25 files in other folders)
