[tool.poetry]
name = "nakulpadalkar-github-io"
version = "0.0.1"
description = "Initial website for Nakul Padalkar GitHub"
authors = ["Nakul Ravindra Padalkar <2807210+nakulpadalkar@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "nakulpadalkar"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
seaborn = "^0.13.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
