[project]
name = "nakulpadalkar-github-io"
version = "0.1.0"
description = ""
authors = [
    {name = "Nakul Padalkar",email = "2807210+nakulpadalkar@users.noreply.github.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "jupyter (>=1.1.1,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "polar (>=0.0.127,<0.0.128)",
    "django (>=5.1.5,<6.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "bokeh (>=3.6.2,<4.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "spark (>=0.2.1,<0.3.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pendulum (>=3.0.0,<4.0.0)",
    "quarto (>=0.1.0,<0.2.0)"
]

[tool.poetry]
packages = [{include = "nakulpadalkar"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
